--- a/po/fretboard.pot
+++ b/po/fretboard.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fretboard\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-01 04:55+0200\n"
+"POT-Creation-Date: 2023-07-01 04:58+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,11 +61,11 @@ msgstr ""
 
 #. translators: "open" is a verb here, not an adjective
 #: src/chord_diagram_top_toggle.rs:155
-msgid "Open String"
+msgid "Open"
 msgstr ""
 
 #: src/chord_diagram_top_toggle.rs:156
-msgid "Mute String"
+msgid "Mute"
 msgstr ""
 
 #: src/ui/window.ui:19
