--- a/po/ru_RU.po
+++ b/po/ru_RU.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fretboard\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-17 15:15+0200\n"
+"POT-Creation-Date: 2023-09-19 07:50+0200\n"
 "PO-Revision-Date: 2023-08-29 19:28+0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -76,7 +76,7 @@ msgstr ""
 
 #: data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in:64
 msgid ""
-"Italian, Russian, and Dutch translations, making Impression available in a "
+"Italian, Russian, and Dutch translations, making Fretboard available in a "
 "total of 4 different languages"
 msgstr ""
 
